# serverlessonedge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Edge/: CMakeLists.txt  callbackclient.cpp  callbackclient.h  callbackserver.cpp  callbackserver.h  composer.cpp  composer.h  computer.cpp  computer.h  container.cpp  container.h  destinationtable.h  edgeclient.cpp  edgeclient.h  edgeclientfactory.cpp  edgeclientfactory.h  edgeclientgrpc.cpp  edgeclientgrpc.h  edgeclientinterface.h  edgeclientmulti.cpp  edgeclientmulti.h  edgeclientpool.cpp  edgeclientpool.h  edgeclientquic.cpp  edgeclientquic.h  edgecomputer.cpp  edgecomputer.h  edgecomputerclient.cpp  edgecomputerclient.h  edgecomputerhttp.cpp  edgecomputerhttp.h  edgecomputerserver.cpp  edgecomputerserver.h  edgecomputersim.cpp  edgecomputersim.h  edgecomputerwsk.cpp  edgecomputerwsk.h  edgecontroller.cpp  edgecontroller.h  edgecontrollerclient.cpp  (+105 more)
Edge/Detail/: printtable.cpp  printtable.h
Edge/Entries/: entry.cpp  entry.h  entryleastimpedance.cpp  entryleastimpedance.h  entryproportionalfairness.cpp  entryproportionalfairness.h  entryrandom.cpp  entryrandom.h  entryroundrobin.cpp  entryroundrobin.h
Edge/Model/: chain.cpp  chain.h  chainfactory.cpp  chainfactory.h  dag.cpp  dag.h  dagfactory.cpp  dagfactory.h  states.cpp  states.h
Executables/: CMakeLists.txt  clienttracegenmain.cpp  edgeclientmain.cpp  edgecomputerclientmain.cpp  edgecomputermain.cpp  edgecomputerwskmain.cpp  edgecontrollermain.cpp  edgedispatchermain.cpp  edgeippclientmain.cpp  edgemulticlientmain.cpp  edgeroutermain.cpp  edgeserverquicmain.cpp  forwardingtableclientmain.cpp  wskproxymain.cpp
Executables/OpenCV/: CMakeLists.txt  detectutils.cpp  detectutils.h  edgecomputerfacerec.cpp  facedetect.cpp  facerecclientmain.cpp  facerecpredict.cpp  facerectrain.cpp
Factory/: CMakeLists.txt  edgeclientfactory.cpp
LambdaMuSim/: CMakeLists.txt  appmodel.cpp  appmodel.h  appperiods.cpp  appperiods.h  apppool.cpp  apppool.h  lambdamusimmain.cpp  mcfp.cpp  mcfp.h  scenario.cpp  scenario.h  simulation.cpp  simulation.h
Misc/: CMakeLists.txt  README.md  benchtimer.cpp  bin.cpp  solver.cpp
OpenCV/: CMakeLists.txt  cvutils.cpp  cvutils.h  facedetectcomputer.cpp  facedetectcomputer.h
Quic/: CMakeLists.txt  basehandler.h  curlclient.cpp  curlclient.h  echohandler.h  edgeclientquic.cpp  edgeclientquic.h  edgeserverquic.cpp  edgeserverquic.h  h2server.cpp  h2server.h  hqserver.cpp  hqserver.h  hqservertransportfactory.cpp  hqservertransportfactory.h  hqsessioncontroller.cpp  hqsessioncontroller.h  lambdarequesthandler.h  quicparams.h  quicparamsbuilder.cpp  quicparamsbuilder.h
Rpc/: CMakeLists.txt  edgecomputer.proto  edgecontroller.proto  edgerouter.proto  edgeserver.proto  void.proto
Simulation/: CMakeLists.txt  client.cpp  client.h  ippclient.cpp  ippclient.h  poissonclient.cpp  poissonclient.h  unifclient.cpp  unifclient.h
StateSim/: CMakeLists.txt  README.md  affinity.cpp  affinity.h  counter.h  element.cpp  element.h  job.cpp  job.h  link.cpp  link.h  network.cpp  network.h  node.cpp  node.h  scenario.cpp  scenario.h  simulation.cpp  simulation.h  statesimmain.cpp  task.cpp  task.h
Test/: CMakeLists.txt  CMakeLists.txt.in  fakerandom.h  testcallback.cpp  testchain.cpp  testchaindagtransactiongrpc.cpp  testchaintransactiongrpc.cpp  testcomposer.cpp  testcomputer.cpp  testcontainer.cpp  testdag.cpp  testedgeclient.cpp  testedgeclientmulti.cpp  testedgeclientmultiquic.cpp  testedgecomputerhttp.cpp  testedgecontrolleretsi.cpp  testedgecontrolleretsibalanced.cpp  testedgecontrollerflat.cpp  testedgecontrollerhier.cpp  testedgemessages.cpp  testedgeservergrpc.cpp  testedgeserverquic.cpp  testetsitransaction.cpp  testforwardingtable.cpp  testhungarian.cpp  testlambda.cpp  testlambdamusim.cpp  testlambdatransaction.cpp  testlambdatransactiongrpc.cpp  testlambdatransactionquic.cpp  testlocaloptimizerasyncPF.cpp  testlocaloptimizerasyncpf.cpp  testmain.cpp  testmcfp.cpp  testmvfst.cpp  testortools.cpp  testparallelcalls.cpp  testprocessor.cpp  testptimeestimator.cpp  teststate.cpp  (+4 more)
Test/Data/: afdbdataset.h  datastatesim.h  taskstatesim.h
cmake/: FindCppREST.cmake
data/: download.sh
docs/: BUILDING.md  arch.drawio  example-chain.drawio  example-chain.md  example-secure.md  example.drawio  example.md  openwhisk_integration.drawio  openwhisk_integration.md  raspberry.json
docs/examples/: chain-1.sh  chain-2.sh  chain-3.sh  dag-1.sh  stateful-1.sh  stateful-2.sh
experiments/: README.md
experiments/300_First_Quic_computer/: clean.sh  problem.py  problem.sh  problem2.py  problem2.sh
experiments/300_First_Quic_computer-wip/: .gitignore  linear_quic.py
experiments/301_First_Quic_router_computer-wip/: experiments.sh  linear_quic.py
experiments/302_Quic_computer_loss/: README.md  experiments.sh  linear_quic.py  quic_computer_loss.py
experiments/303_Quic_router_computer/: README.md  experiments.sh  linear_quic.py  quic_router_computer.py
experiments/304_Quic_Uncoordinated_chicago/: README.md  create_topo.sh  experiments.sh  nodes.coord  uncoordinated_chicago.py
experiments/304_Quic_computer_chicago/: README.md  create_topo.py  create_topo.sh  experiments.sh  quic_computer_chicago.py
experiments/400_Simple_function_chain/: .gitignore  README.md  clean.sh  experiments.sh  simple_function_chain.py
experiments/401_Simple_function_dag/: README.md  clean.sh  experiments.sh  simple_function_dag.py
experiments/402_Motivation_dag/: README.md  experiments.sh  motivation_dag.py
experiments/410_Mvfst_motivation/: .gitignore  (+6 more)
hq/: CMakeLists.txt  HQServer.cpp
jenkins/: .gitignore  build_all.sh  cppcheck.sh  cppcheck.suppression  report.xml  run_tests.sh
scripts/: README.md  binstat.py  confidence.py  create_topo.py  download-artifacts.sh  download-percentile.sh  format.sh  ftapplier.py  ftu.py  hspread.py  maxperrow.py  mkresdir.sh  mktmpfs.sh  multiplot.sh  ovs-monitor.py  ovs-stat.py  pdfplot.sh  percentile.py  plot.sh  table_size.sh
utils/: build_opencv.sh  build_ortools.sh  create_cert.sh  environment
(+186 files in other folders)
